--- a/src/DocBundle/Resources/views/parametrage/edit.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/edit.html.twig
@@ -1,7 +1,8 @@
 {% extends 'DocBundle:Default:index.html.twig' %}
 
 {% block body %}
-    <h1>Modification d'un paramètre</h1>
+    <h3><i class="glyphicon glyphicon-th-list"></i> Modification d'un paramètre</h3>
+    <hr>
     {% if confirmation is defined %}
         <div class="alert alert-success">
             <strong>Success!</strong> Le paramètre a été modifié avec succès.
