--- a/src/DocBundle/Resources/views/reseau/show.html.twig
+++ b/src/DocBundle/Resources/views/reseau/show.html.twig
@@ -1,8 +1,8 @@
 {% extends 'DocBundle:Default:index.html.twig' %}
 
 {% block body %}
-    <h1>Reseau</h1>
-
+    <h3><i class="glyphicon glyphicon-th-list"></i> Réseau</h3>
+    <hr>
     <table class="table table-striped table-responsive table-bordered">
         <tbody>
             <!--<tr>
