--- a/src/DocBundle/Resources/views/Default/index.html.twig
+++ b/src/DocBundle/Resources/views/Default/index.html.twig
@@ -2,18 +2,42 @@
 
 {% block stylesheets %}
    {{ parent() }}
-   {% stylesheets '@DocBundle/Resources/public/css/*' filter='cssrewrite' %}
-      <link rel="stylesheet" href="{{ asset_url }}" />
-   {% endstylesheets %}
 {% endblock %}
 
 {% block body %}
-   <h3>Accueil de l'application</h3>
+   <h3><i class="glyphicon glyphicon-home"></i> Accueil de l'application</h3>
+   <hr>
+   <div class="well">
+      <form class="form-horizontal" method="get" action="" id="selectReseau">
+         <div class="form-group">
+            <label class="col-sm-3 control-label required" for="reseau">Réseau</label>
+            <div class="col-sm-4">
+               <select class="form-control" id="reseau">
+                  <option value="" disabled selected>Choisir le réseau</option>
+                  {% for reseau in reseaus %}
+                     <option value="{{ reseau.id }}">{{ reseau.name }}</option>
+                  {% endfor %}
+               </select>
+               <!--<button type="submit" class="glyphicon glyphicon-ok btn btn-primary">Choisir</button>-->
+            </div>
+         </div>
+      </form>
+
+   </div>
+
+
 {% endblock %}
 
 {% block javascripts %}
    {{ parent() }}
-   {% javascripts '@DocBundle/Resources/public/js/*' %}
-      <script src="{{ asset_url }}"></script>
-   {% endjavascripts %}
+   <script type="text/javascript">
+      $(document).ready(function(){
+         $('#reseau').change( function() {
+            form = $("#selectReseau");
+            id = $( "#reseau option:selected" ).val();
+            form.attr("action","reseau/"+id+"/parametrages");
+            form.submit();
+         });
+      });
+   </script>
 {% endblock %}
