--- a/src/DocBundle/Resources/views/version/version_params.html.twig
+++ b/src/DocBundle/Resources/views/version/version_params.html.twig
@@ -6,9 +6,9 @@
 {% block body %}
     <div class="row">
         {% if  parametrages is empty %}
-            <h3><i class="glyphicon glyphicon-th-list"></i> Aucun paramétrage n'a été renseign {{ reseau.name }}</h3>
+            <h3><i class="glyphicon glyphicon-th-list"></i> Aucun paramétrage n'a été archivé pour le réseau {{ reseau.name }}</h3>
         {% else %}
-            <h3><i class="glyphicon glyphicon-th-list"></i> La liste des paramètrages de {{ reseau.name }}
+            <h3><i class="glyphicon glyphicon-th-list"></i> La liste des paramètrages de {{ reseau.name }} (historique)
                 <span class="label label-default">V{{ version.numero }} {{ version.enCours ? 'En cours...' : '' }}</span>
             </h3>
             <hr>
@@ -18,7 +18,6 @@
                     <table class="table table-striped table-condensed responsive no-wrap table-bordered table-hover" id="source">
                         <thead>
                         <tr>
-                            <!--<th>Id</th>-->
                             <th>Partenaires</th>
                             <th>Collectivites</th>
                             <th>Contrat</th>
@@ -27,13 +26,12 @@
                             <th>Type</th>
                             <th>Reference</th>
                             <th>Pdf</th>
-                            <th>Actions</th>
+                            <!--<th>Actions</th>-->
                         </tr>
                         </thead>
                         <tbody>
                         {% for parametrage in parametrages %}
                             <tr>
-                                <!--<td><a href="{{ path('parametrage_show', { 'id': parametrage.id }) }}">{{ parametrage.id }}</a></td>-->
                                 <td>
                                     {{ parametrage.partenaires }}
                                 </td>
@@ -43,9 +41,8 @@
                                 <td>{{ parametrage.ordre }}</td>
                                 <td>{{ parametrage.type }}</td>
                                 <td>{{ parametrage.reference }}</td>
-                                <td><a href="{{ path('parametrage_show_pdf', { 'id': parametrage.id }) }}">{{ parametrage.pdfSource.title }}</a></td>
-                                <!--<td>{{ parametrage.commentaire }}</td>-->
-                                <td>
+                                <td><a href="{{ path('parametrage_show_archive_pdf', { 'id': parametrage.id }) }}">{{ parametrage.pdfSource.title }}</a></td>
+                                <!--<td>
                                     <ul>
                                         <li>
                                             <a href="{{ path('parametrage_delete', { 'id': parametrage.id }) }}">
@@ -58,7 +55,7 @@
                                             </a>
                                         </li>
                                     </ul>
-                                </td>
+                                </td>-->
                             </tr>
                         {% endfor %}
                         </tbody>
@@ -107,7 +104,7 @@
             <hr>
             <div class="row">
                 <div class="col-sm-12">
-                    <button type="button" class="btn btn-primary {{ version.enCours ? '' : 'disabled' }}" {{ version.enCours ? 'data-toggle="modal" data-target="#myModal"' : '' }}>
+                    <button type="button" class="btn btn-primary inline" data-toggle="modal" data-target="#myModal">
                         <i class="glyphicon glyphicon-cog"></i> Générer
                     </button>
                     {{ form_start(exportForm, {'attr': {'class': 'form-inline pull-right', 'id': 'generateForm', 'style':'display:inline-block'}}) }}
