--- a/src/DocBundle/Resources/views/parametrage/index.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/index.html.twig
@@ -50,7 +50,7 @@
                     <td>{{ parametrage.ordre }}</td>
                     <td>{{ parametrage.type }}</td>
                     <td>{{ parametrage.reference }}</td>
-                    <td><a href="{{ path('parametrage_show_pdf', { 'id': parametrage.id }) }}">{{ parametrage.pdfSource.title }}</a></td>
+                    <td><a href="{{ path('parametrage_show_pdf', { 'id': parametrage.id }) }}">{{ parametrage.lastPdfSource.title }}</a></td>
                     <td>
                         {% if parametrage.deleting %}
                             <div class="deleting">
