--- a/src/DocBundle/Resources/views/parametrage/form.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/form.html.twig
@@ -69,10 +69,10 @@
     </div>
 
     <div class="form-group">
-        {{ form_label(form.pdfSource, "Fichier (PDF)", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
-        {{ form_errors(form.pdfSource) }}
+        {{ form_label(form.currentPdf, "Fichier (PDF)", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+        {{ form_errors(form.currentPdf) }}
         <div class="col-sm-4">
-            {{ form_widget(form.pdfSource.file, {'attr': {'class': 'form-control'}}) }}
+            {{ form_widget(form.currentPdf.file, {'attr': {'class': 'form-control'}}) }}
         </div>
     </div>
 
