--- a/src/DocBundle/Resources/views/parametrage/show.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/show.html.twig
@@ -43,7 +43,7 @@
             </tr>
             <tr>
                 <th>Pdfsource</th>
-                <td><a href="{{ path('parametrage_show_pdf', { 'id': parametrage.id }) }}">{{ parametrage.pdfSource.title }}</a></td>
+                <td><a href="{{ path('parametrage_show_pdf', { 'id': parametrage.id }) }}">{{ parametrage.lastPdfSource.title }}</a></td>
             </tr>
         </tbody>
     </table>
