--- a/src/DocBundle/Resources/views/reseau/history.html.twig
+++ b/src/DocBundle/Resources/views/reseau/history.html.twig
@@ -7,16 +7,43 @@
     {% else %}
         <h3><i class="glyphicon glyphicon-th-list"></i> L'historiques du réseau {{ reseau.name }}.
         </h3>
+        <hr>
 
-        <div class="well">
-            <ul>
+        <div class="table-responsive">
+            <table class="table table-bordered table-hover table-striped">
+                <thead>
+                <tr>
+                    <th>Numéro</th>
+                    <th>Date de création</th>
+                    <th>Date de génération</th>
+                    <th>Utilisateur</th>
+                    <th>Commentaire</th>
+                </tr>
+                </thead>
+                <tbody>
                 {% for version in versions %}
-                    <li>
-                        <a href="{{ path('version_history_params', {'id': version.id}) }}">Version {{ version.numero }}</a>
-                    </li>
+                    <tr class='clickable-row' data-href="{{ path('version_history_params', {'id': version.id}) }}" style="cursor:pointer;">
+                        <td>{{ version.numero }}</td>
+                        <td>{{ version.createdAt |date("d/m/Y à H:i:s") }}</td>
+                        <td>{{ version.updatedAt |date("d/m/Y à H:i:s") }}</td>
+                        <td>{{ version.user }}</td>
+                        <td>{{ version.message }}</td>
+                    </tr>
+
                 {% endfor %}
-            </ul>
+                </tbody>
+            </table>
         </div>
 
     {% endif %}
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    <script type="application/javascript">
+        $(document).ready(function($) {
+            $(".clickable-row").click(function() {
+                window.document.location = $(this).data("href");
+            });
+        });
+    </script>
 {% endblock %}
